--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
         </title>
     </head>
     <body>
-        <h1>helo world !</h1>
+        <h1 style="color:red;">hello world !</h1>
     </body>
 </html>
