my site imported

--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,68 @@
+<!DOCTYPE html>
 <html>
     <head>
-        <title>
-        </title>
+      <title>Hello world !</title>
+      <script type="text/javascript" src="csi.js"></script>
+      <script type="text/javascript" src="javascript.js"></script>
+      <link type="text/css" rel="stylesheet" href="fonts.css"/>
+      <link type="text/css" rel="stylesheet" href="css.css"/>
+      <link type="text/css" rel="stylesheet" href="font-awesome-4.6.3/css/font-awesome.min.css">
+      <!-- <script src="https://use.fontawesome.com/de6b2f85fd.js"></script> -->
+      <link rel="icon" href="favicon.jpg" type="image/jpg" />
     </head>
     <body>
-        <h1 style="color:red;">hello world !</h1>
+
+      <div class="header">
+        <img alt="Krishna" src="images/header-logo2.png" title="supreme personality of godhead"/>
+        <a class="header-logo" href="index.html"><span id="w3schools">W3SCHOOLS</span><span id="com">.COM</span></a>
+      </div>
+
+      <nav class="nav-bar">
+        <i class="fa fa-home fa-2x" aria-hidden="true"></i>
+        <a href="#">html</a><a href="#">css</a><a href="#">javascript</a><a href="#">angularjs 2</a>
+        <i class="fa fa-search fa-2x" aria-hidden="true"></i>
+      </nav>
+
+      <aside id="form">
+        <form method="GET" action="https://www.google.com">
+          <p style="display:inline;">Name : </p>
+          <input type="text" width="70px" height="20px"/>
+        </form>
+      </aside>
+
+      <aside id="sidebar">
+        <div id="sidebar-header">
+          <h1 id="sidebar-heading">Related Links</h1>
+        </div>
+        <div id="sidebar-listcontainer">
+            <ul id="sidebar-unorderedlist">
+              <li class="sidebar-listitem"><a href="https://www.google.com" id="sidebar-link1">FAQ</a></li>
+              <li class="sidebar-listitem"><a href="https://www.gmail.com" id="sidebar-link2" >About Us</a></li>
+            </ul>
+        </div>
+      </aside>
+
+      <main class="main">
+        <h1 id="heading-main"> CSS "Always on the bottom" Footer </h1>
+        <p>I often find myself designing a website where the footer must rest at the bottom of the page, even if the content above it is too short to push it to the bottom of the viewport naturally.</p>
+        <p>However, if the content is taller than the user's viewport, then the footer should disappear from view as it would normally, resting at the bottom of the page (not fixed to the viewport).</p>
+        <p>If you know the height of the footer, then you should set it explicitly, and set the bottom padding of the footer's parent element to be the same value (or larger if you want some spacing).</p>
+        <p>This is to prevent the footer from overlapping the content above it, since it is being removed from the document flow with <code>position: absolute;</code>.</p>
+
+        <p>I often find myself designing a website where the footer must rest at the bottom of the page, even if the content above it is too short to push it to the bottom of the viewport naturally.</p>
+        <p>However, if the content is taller than the user's viewport, then the footer should disappear from view as it would normally, resting at the bottom of the page (not fixed to the viewport).</p>
+        <p>If you know the height of the footer, then you should set it explicitly, and set the bottom padding of the footer's parent element to be the same value (or larger if you want some spacing).</p>
+        <p>This is to prevent the footer from overlapping the content above it, since it is being removed from the document flow with <code>position: absolute;</code>.</p>
+
+        <p>I often find myself designing a website where the footer must rest at the bottom of the page, even if the content above it is too short to push it to the bottom of the viewport naturally.</p>
+        <p>However, if the content is taller than the user's viewport, then the footer should disappear from view as it would normally, resting at the bottom of the page (not fixed to the viewport).</p>
+        <p>If you know the height of the footer, then you should set it explicitly, and set the bottom padding of the footer's parent element to be the same value (or larger if you want some spacing).</p>
+        <p>This is to prevent the footer from overlapping the content above it, since it is being removed from the document flow with <code>position: absolute;</code>.</p>
+      </main>
+
+      <div class="footer">
+        <p> &copy Yogi 2016</p>
+      </div>
+
     </body>
 </html>
