--- a/site/index.html
+++ b/site/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
       <title>Hello world !</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
       <script type="text/javascript" src="csi.js"></script>
       <script type="text/javascript" src="javascript.js"></script>
       <link type="text/css" rel="stylesheet" href="fonts.css"/>
