--- a/site/index.html
+++ b/site/index.html
@@ -8,7 +8,7 @@
       <link type="text/css" rel="stylesheet" href="fonts.css"/>
       <link type="text/css" rel="stylesheet" href="css.css"/>
       <link type="text/css" rel="stylesheet" href="font-awesome-4.6.3/css/font-awesome.min.css">
-      <!-- <script src="https://use.fontawesome.com/de6b2f85fd.js"></script> -->
+      <!-- <script src="https://use.fontawesome.com/de6b2f85fd.js"></script> -->charset="UTF-8"
       <link rel="icon" href="favicon.jpg" type="image/jpg" />
     </head>
     <body>
