charset and lang attribute added

--- a/site/index.html
+++ b/site/index.html
@@ -14,7 +14,7 @@
     <body>
 
       <div class="header">
-        <img alt="Krishna" src="images/header-logo2.png" title="supreme personality of godhead"/>
+        <!--<img alt="Krishna" src="images/header-logo2.png" title="supreme personality of godhead"/>-->
         <a class="header-logo" href="index.html"><span id="w3schools">W3SCHOOLS</span><span id="com">.COM</span></a>
       </div>
 
