just a new addition

--- a/site/index.html
+++ b/site/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
       <title>Hello world !</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,13 +8,14 @@
       <link type="text/css" rel="stylesheet" href="fonts.css"/>
       <link type="text/css" rel="stylesheet" href="css.css"/>
       <link type="text/css" rel="stylesheet" href="font-awesome-4.6.3/css/font-awesome.min.css">
-      <!-- <script src="https://use.fontawesome.com/de6b2f85fd.js"></script> -->charset="UTF-8"
+      <!-- <script src="https://use.fontawesome.com/de6b2f85fd.js"></script> -->
+      <meta charset="UTF-8">
       <link rel="icon" href="favicon.jpg" type="image/jpg" />
     </head>
     <body>
 
       <div class="header">
-        <!--<img alt="Krishna" src="images/header-logo2.png" title="supreme personality of godhead"/>-->
+        <img alt="Krishna" src="images/header-logo2.png" title="supreme personality of godhead"/>
         <a class="header-logo" href="index.html"><span id="w3schools">W3SCHOOLS</span><span id="com">.COM</span></a>
       </div>
 
@@ -60,9 +61,8 @@
         <p>If you know the height of the footer, then you should set it explicitly, and set the bottom padding of the footer's parent element to be the same value (or larger if you want some spacing).</p>
         <p>This is to prevent the footer from overlapping the content above it, since it is being removed from the document flow with <code>position: absolute;</code>.</p>
       </main>
-
       <div class="footer">
-        <p> &copy Yogi 2016</p>
+        <p> &copy; Yogi 2016</p>
       </div>
 
     </body>
