increased font size

--- a/responsive.html
+++ b/responsive.html
@@ -79,25 +79,29 @@ body {
     background-color: #134c8d;
     transition: background-color 0.3s;
   }
-  #main{
-    width: 100%;
+  * {
     font-size: 140%;
   }
+  
 }
 </style>
 </head>
 <body>
-
+  <!--*****************Header**********************-->
   <div id="header"><h1>Header</h1></div>
-<div id="nav-bar">
-  <ul>
-    <li class="lists"><a href="#" id="google">Google</a></li><li class="lists"><a href="#" id="facebook">Facebook</a></li><li class="lists"><a href="#" id="youtube">YouTube</a></li>
-  </ul>
-</div>
-<div id="main">
-<p>The background-position property is <em>animatable</em> in CSS.</p>
-<p><strong>Note:</strong> CSS Animations do not work in Internet Explorer 9 and earlier versions.</p>
-</div>
+  <!--*************Navigation bar**********************-->
+  <div id="nav-bar">
+    <ul>
+      <li class="lists"><a href="#" id="google">Google</a></li><li class="lists"><a href="#" id="facebook">Facebook</a></li><li class="lists"><a href="#" id="youtube">YouTube</a></li>
+    </ul>
+  </div>
+  <!--**************Main Content**********************-->
+  <div id="main">
+    <p>The background-position property is <em>animatable</em> in CSS.</p>
+    <p><strong>Note:</strong> CSS Animations do not work in Internet Explorer 9 and earlier versions.</p>
+  
+  </div>
+  <!--*****************Footer**********************-->
   <div id="footer">&copy;2016</div>
 </body>
 </html>
