to top button color fixed

--- a/site/index.html
+++ b/site/index.html
@@ -6,7 +6,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta charset="utf-8">
       <script type="text/javascript" src="csi.js"></script>
-      <script type="text/javascript" src="index.js"></script>
+      <script type="text/javascript" src="js/index.js"></script>
       <link type="text/css" rel="stylesheet" href="fonts.css"/>
       <link rel="stylesheet" type="text/css" href="css/header.css">
       <link rel="stylesheet" type="text/css" href="css/navBar.css">
