--- a/site/nav_links/javascript_tutorial.html
+++ b/site/nav_links/javascript_tutorial.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="../css/header.css">
   <link rel="stylesheet" type="text/css" href="../css/navBar.css">
   <link rel="stylesheet" type="text/css" href="../css/footer.css">
-  <link type="text/css" rel="stylesheet" href="../css/index/index.css"/>
+  <link type="text/css" rel="stylesheet" href="../css/styles.css"/>
   <link type="text/css" rel="stylesheet" href="../font-awesome-4.6.3/css/font-awesome.min.css"/>
   <!-- <script type="text/javascript" src="js/index.js"></script> -->
 </head>
@@ -17,7 +17,7 @@
 
     <a href="../index.html"><i class="fa fa-home fa-2x nav-link" aria-hidden="true"></i></a>
 
-    <a href="#" class="nav-link">html</a><a href="#" class="nav-link">css</a><a href="#" class="nav-link">javascript</a><a href="#" class="nav-link">angularjs 2</a>
+    <a href="html_tutorial.html" class="nav-link">html</a><a href="css_tutorial.html" class="nav-link">css</a><a href="#" class="nav-link">javascript</a><a href="angular_tutorial.html" class="nav-link">angularjs 2</a>
 
     <a href="../index.html"><i class="fa fa-search fa-2x nav-link" aria-hidden="true"></i></a>
 
@@ -25,15 +25,24 @@
 
   <div id="header">
     <img alt="Krishna" src="../images/header-logo2.png" title="supreme personality of godhead"/>
-    <a class="header-logo" href="index.html"><span id="w3schools">W3SCHOOLS</span><span id="com">.COM</span></a>
+    <a class="header-logo" href="../index.html"><span id="w3schools">W3SCHOOLS</span><span id="com">.COM</span></a>
   </div>
 
   <nav id="nav-bar">
-    <i class="fa fa-home fa-2x nav-link" aria-hidden="true" onclick="location.href='index.html'"></i>
-    <a href="#" class="nav-link">html</a><a href="nav_links/css.html" class="nav-link">css</a><a href="#" class="nav-link">javascript</a><a href="#" class="nav-link">angularjs 2</a>
+    <i class="fa fa-home fa-2x nav-link" aria-hidden="true" onclick="location.href='../index.html'"></i>
+
+    <a href="html_tutorial.html" class="nav-link">html</a><a href="css_tutorial.html" class="nav-link">css</a><a href="#" class="nav-link">javascript</a><a href="angular_tutorial.html" class="nav-link">angularjs 2</a>
+
     <i class="fa fa-search fa-2x nav-link" aria-hidden="true"></i>
   </nav>
 
+  <main>
+    <h1>Javascript Tutorial</h1>
+  </main>
+
+  <footer>
+    <p> &copy; Yogi 2016</p>
+  </footer>
 
 </body>
 </html>
