--- a/site/index.html
+++ b/site/index.html
@@ -12,6 +12,7 @@
       <link rel="stylesheet" type="text/css" href="css/navBar.css">
       <link rel="stylesheet" type="text/css" href="css/footer.css">
       <link type="text/css" rel="stylesheet" href="css/index/index.css"/>
+      <link rel="stylesheet" type="text/css" href="css/styles.css">
       <link rel="stylesheet" type="text/css" media="only screen and (max-width: 720px),only screen and (max-device-width:720px)" href="css/index/smartphone720p.css">
       <link type="text/css" rel="stylesheet" href="font-awesome-4.6.3/css/font-awesome.min.css"/>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -30,7 +31,7 @@
       </nav>
 
       <div id="header">
-        <img alt="Krishna" title="supreme personality of godhead"/>
+        <img alt="Krishna" title="peacock"/>
         <a class="header-logo" href="index.html"><span id="w3schools">W3SCHOOLS</span><span id="com">.COM</span></a>
       </div>
 
@@ -115,7 +116,8 @@
         </div>
       </main>
 
-      <a href="#top" id="toTop" class="toTop"><i class="fa fa-arrow-circle-up fa-3x" aria-hidden="true"></i></a>
+      <a href="#top" id="toTop"><i class="fa fa-arrow-circle-up fa-3x" aria-hidden="true"></i></a>
+
       <footer>
         <p> &copy; Yogi 2016</p>
       </footer>
